cmake_minimum_required(VERSION 3.11.x)
project("msdmgrab" C)
set(CMAKE_C_STANDARD 99)
add_executable(${PROJECT_NAME} main.c linux.c)
if(MSVC)
  target_compile_options(${PROJECT_NAME}} PRIVATE /W4 /WX)
else()
  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror -std=c99 -O2)
endif()